--- a/spring-bean-factory/pom.xml
+++ b/spring-bean-factory/pom.xml
@@ -24,6 +24,12 @@
             <version>4.7</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>cn.iomc</groupId>
+            <artifactId>spring-commom</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
